	* Added support for ROMFS filesystem.
	* Added a simple test the ROMFS filesystem (examples/romfs)
	* NSH: Use ROMFS to provide an option for a start-up script at /etc/init.d/rcS
	* Add definition of BIOC_XIPBASE ioctl and implement in RAM disk block driver.
	  This is a low level requirement for eXecute In Place (XIP) support.
	* Add a FIOC_MMAP to perform memory mapping of a file and implemented the
	  ioctl command in the ROMFS filesystem.  This is a requirement for eXecute
	  In Place (XIP) support.
	* Add mmap() API with restricted capability (only for XIP support)
	* Extend ROMFS test at /examples/romfs to verify mmap() and XIP support.
	* Add support for Intel Hex format output using objcopy
	* Completed the basic port of the NXP LPC2148 on the mcu123.com board.
	  The basic port includes successful booting, timer interrupts, serial console,
	  succesfully passing the examples/ostest, and a NuttShell (NSH) configuration.
	* ARM architectures now support drivers/lowconsole.c

0.3.16 2008-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
	* Added header files defining a common USB device controller architecture
	* Added USB device side driver for the LPC214x (untested at initial checkin)
	* Correct the frequency of system timer interrupts (off by 20x in nuttx-0.3.15)
	* Add an option to set aside a separate stack for interrupt handling (ARM only).
	  This is useful when memory is constrained, there are multiple tasks, and
	  the interrupt stack requirement is high (as when USB is enabled).
	* Basic LPC214x USB device side driver basically functional (but probably still buggy)
	* Initial USB serial class device side driver check in (not well tested at initial checkin)
	* Add LPC214x USB serial configuration; Add examples/usbserial test (still a work in progress)
	* Added USB device side driver for the DM320 (untested at initial checkin)
	* Fixed an error in a previous (post 0.3.15) check-in that broke the LPC214x system timer.


